fix(pagination): curtail expanding input on Firefox (#460)
COMUI-2728

--- a/packages/genesys-spark-components/src/components/stable/gux-pagination/gux-pagination-buttons/gux-pagination-buttons.less
+++ b/packages/genesys-spark-components/src/components/stable/gux-pagination/gux-pagination-buttons/gux-pagination-buttons.less
@@ -52,8 +52,9 @@ gux-pagination-buttons {
         margin: 0 @gux-spacing-xs;
 
         input {
-          width: inherit;
+          width: 60px;
           text-align: center;
+          background: transparent;
         }
       }
     }
